# AKARI-intern

./: README.md
py3.11.8/registration/: pyproject.toml
py3.11.8/registration/registration/: regis.py  video_URL.md
py3.11.8/registration/tests/: kdtest.py  kdtest2.py  kdtest3.py  kdtree.py  kdtree2.py  kdtree3.py  r_trans.py  r_trans2.py  r_trans3.py  r_trans4.py  r_trans5.py  r_trans6.py  r_trans7.py  r_trans8.py  r_trans9.py  read_data.py  regis.py  regis2.py  regis3.py  regis4.py  regis5.py  test.py  test2.py  test3.py  workspace1.txt:Zone.Identifier  workspace2.txt:Zone.Identifier
