[tool.poetry]
name = "registration"
version = "0.1.0"
description = ""
authors = ["Haruto0816 <haruto.python@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
